--- a/koa-serve/package.json
+++ b/koa-serve/package.json
@@ -33,6 +33,7 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa2-cors": "^2.0.6",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "svg-captcha": "^1.4.0"
   }
 }
