--- a/react-client/package.json
+++ b/react-client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.22.0",
+    "antd": "^3.24.0",
     "axios": "^0.19.0",
     "braft-editor": "^2.3.8",
     "braft-extensions": "0.0.19",
@@ -14,7 +14,7 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
